# upkeeper

./: .gitignore  Changes  Doxyfile  LICENSE  Makefile  Makefile.am  Makefile.in  NOTICE  README  Rules.mk  TODO  aclocal.m4  config.h.in  configure  configure.ac  configure.scan  end.mk  libtool  mainpage.doc  makefile  upkeeper_config.h.in
.mk/: begin  end
adm/y/: build.bim  build.sh  ptest
api/: Rules.mk  test.c  upk.c  upk_api.c  upk_api.h
buddy/: Makefile  Makefile.am.inc  Makefile.in  Rules.mk  buddy.c  buddy.pod  buddy.usage.txt  buddytest.c  buddytest.t  do-sleep  main.c  sigblock.c  sigblock.h  upk_buddy.c  upk_buddy.h
clients/: Makefile  Makefile.am  Makefile.in  gmon.out  upk  upk.c  upk_reload.c  upk_start  upk_start.b.c  upk_start.c  upk_stop  upk_stop.c
clients/.deps/: upk.Po
clients/.libs/: lt-upk  upk
common/: Rules.mk  coe.c  coe.h  coe.test.c  coe.test.c   err.c  err.h  iopause.c  iopause.h  nonblock.c  nonblock.h  nonblock.test.c  rptqueue.c  rptqueue.h  rptqueue.test.c  select.h  sig.c  sig.h  sig_block.c  sig_catch.c  sig_pause.c  sigblock.c  sigblock.h  sigblock.test.c  tai.h  test.c  test.h  wait_nohang.c  wait_pid.c
compat/: strnlen.c
controller/: Makefile  Makefile.am  Makefile.in  Rules.mk  buddy-controller.t  buddy.c  buddy.h  buddy_main.c  buddyinc.h  config.c  controller-test.c  controller.c  controller.h  controller_audit.sql  controller_cfg.sql  controller_main.c  core.24093  ctrl_buddy.c  ctrl_create_audit.sql  ctrl_create_cfg.sql  ctrl_data.c  ctrl_data.h  ctrl_eventloop.c  ctrl_protocol.c  ctrl_protocol.h  ctrl_sql.h  demo-down.sh  demo-up.sh  eventloop.c  main.c  upk.c
daemon/: sleeper-daemon
demo/: demo-down.sh  demo-setup.sh  demo-up.sh  sleep10.sh  sleep60.sh  upkeeper-init
doc/: sqlite-notes.txt  upk_db.pod  upkeeper.pod  upkeeperipc
docs/html/: 3_87_83_2shell_8c.html  3_87_83_2sqlite3_8c.html  3_87_83_2sqlite3_8h-source.html  3_87_83_2sqlite3_8h.html  3_87_83_2sqlite3ext_8h-source.html  3_87_83_2sqlite3ext_8h.html  annotated.html  api_2test_8c.html  api_2upk_8c.html  buddy_8c.html  buddy_8c__incl.map  buddy_8c__incl.md5  (+2463 more)
docs/latex/: 3_87_83_2shell_8c.tex  (+2304 more)
libupkeeper/: Doxyfile  Makefile  Makefile.am  Makefile.in  core.13529  gmon.out  json.c  rmrf.c  s.c  t.c  upkclient.pp  upkeeper.h
libupkeeper/docs/html/: annotated.html  c__isxdigit_8c.html  compat_8h-source.html  compat_8h.html  config_8h-source.html  config_8h.html  controller_8c.html  crc32_8h-source.html  crc32_8h.html  error_8h-source.html  error_8h.html  files.html  functions.html  functions_vars.html  globals.html  globals_0x62.html  globals_0x63.html  globals_0x64.html  globals_0x65.html  globals_0x66.html  globals_0x67.html  globals_0x69.html  globals_0x6a.html  globals_0x6c.html  globals_0x6d.html  globals_0x70.html  globals_0x72.html  globals_0x73.html  globals_0x74.html  globals_0x75.html  globals_0x76.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  group__config.html  group__config__impl.html  group__configuration.html  (+116 more)
libupkeeper/docs/latex/: annotated.tex  c__isxdigit_8c.tex  compat_8h.tex  config_8h.tex  controller_8c.tex  crc32_8h.tex  doxygen.sty  error_8h.tex  files.tex  group__config.tex  group__config__impl.tex  group__configuration.tex  group__controller.tex  group__functions.tex  group__services.tex  group__upk__errors.tex  group__uuid.tex  group__uuid__functions.tex  json_8c.tex  modules.tex  protocol_8h.tex  refman.tex  std__include_8h.tex  stdbool_8in_8h.tex  strnlen_8c.tex  struct__upk__controller__config.tex  struct__upk__cust__actscr__list.tex  struct__upk__json__type__handlers.tex  struct__upk__svc__desc.tex  struct__upk__svcinfo.tex  struct__upk__svcinfo__t.tex  struct__upk__svclist.tex  struct__upk__uuid.tex  struct__upk__uuid__t.tex  structupk__ack__repl__t.tex  structupk__action__req__t.tex  structupk__cancel__pubmsg__t.tex  structupk__controller__config__t.tex  structupk__discon__req__t.tex  structupk__error__repl__t.tex  (+67 more)
libupkeeper/docs/man/man3/: _upk_controller_config.3  _upk_cust_actscr_list.3  _upk_json_type_handlers.3  _upk_svc_desc.3  _upk_svcinfo.3  _upk_svcinfo_t.3  _upk_svclist.3  _upk_uuid.3  _upk_uuid_t.3  c_isxdigit.c.3  compat.h.3  config.3  config.h.3  config_impl.3  configuration.3  controller.3  controller.c.3  crc32.h.3  error.h.3  functions.3  json.c.3  protocol.h.3  services.3  std_include.h.3  stdbool.in.h.3  strnlen.c.3  t.c.3  types.h.3  upk_ack_repl_t.3  upk_action_req_t.3  upk_cancel_pubmsg_t.3  upk_client.c.3  upk_client.h.3  upk_compat.h.3  upk_config.c.3  upk_config.h.3  upk_controller_config_t.3  upk_crc32.c.3  upk_crc32.h.3  upk_discon_req_t.3  (+62 more)
libupkeeper/tests/: Makefile.am  Makefile.in  config.c  dlinked_lists.c  gmon.out  linked_lists.c  test.json  tskel.c  upk_protocol_helpers.c  upk_protocol_serializers.c  util.c  uuid.c  v0_protocol_generic_value_checks.inc.c  v0_protocol_helpers.c  v0_protocol_serializers.c
libupkeeper/upkeeper/: .upk_config.c.swp  compat.h  config.h  controller.c  crc32.h  error.h  json.c  libupkeeper_util_la-upk_crc32.lo  libupkeeper_util_la-upk_util.lo  libupkeeper_util_la-uuid.lo  protocol.h  std_include.h  stdbool.in.h  strnlen.c  tags  types.h  upk_client.c  upk_client.h  upk_client_net.c  upk_client_net.h  upk_compat.c  upk_compat.h  upk_config.c  upk_config.h  upk_crc32.c  upk_crc32.h  upk_error.c  upk_error.h  upk_include.h  upk_json.c  upk_json.h  upk_json_fmt.h  upk_network.c  upk_network.h  upk_network_types.h  upk_protocol.c  upk_protocol.h  upk_protocol_serializer.c  upk_std_include.h  upk_types.h  (+10 more)
libupkeeper/upkeeper/include/: upkeeper_config.h.in
m4/: upk_have_progname.m4  upk_helpers.m4  upk_installdirs.m4  upk_poll.m4  upk_with_lib.m4
scripts/: create_sql_header.sh  ybuild.sh
store/: Makefile  README  Rules.mk  buddy  init.sh  main.c  schema-main.sql  schema-misc.sql  schema-setup.sh  schema.sql  sqlite-dump  sqlite-test  store-test.t  store.sqlite  test.c  upk_db.c  upk_db.h  util.c
uptop/: Rules.mk  main.c  render.c  uptop.h
util/: Rules.mk  main.c  sqlite-repair.c
(+457 files in other folders)
