SUBDIRS = libupkeeper controller clients 

ACLOCAL_AMFLAGS    = -I m4
AM_CPPFLAGS_G = -DCONF_SYSCONFDIR=@conf_sysconfdir@ -DCONF_LOCALSTATEDIR=@conf_localstatedir@ -DCONF_LIBEXECDIR=@conf_libexecdir@

#conf_prefix
#conf_execprefix
#conf_bindir
#conf_sbindir
#conf_libexecdir
#conf_sysconfdir
#conf_sharedstatedir
#conf_localstatedir
#conf_libdir
#conf_includedir
#conf_oldincludedir
#conf_datarootdir
#conf_datadir
#conf_infodir
#conf_localedir
#conf_mandir
#conf_docdir
#conf_htmldir
#conf_dvidir
#conf_pdfdir
#conf_psdir
